rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__edge_cases__multi_stage_rolling_without_date_range_with_gaps.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/edge_cases.rs
assertion_line: 159
expression: result
---
orders__created_at_month | orders__rolling_count_3m_ms
-------------------------+----------------------------
2024-01-01 00:00:00      | 1                          
2024-02-01 00:00:00      | 1                          
2024-03-01 00:00:00      | 1                          
2024-04-01 00:00:00      | NULL                       
2024-05-01 00:00:00      | 5
