rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__edge_cases__rolling_count_distinct.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/edge_cases.rs
expression: result
---
orders__created_at_day | orders__rolling_unique_customers_7d
-----------------------+------------------------------------
2024-01-10 00:00:00    | 3                                  
2024-01-11 00:00:00    | 2                                  
2024-01-12 00:00:00    | 3                                  
2024-01-13 00:00:00    | 3                                  
2024-01-14 00:00:00    | 3                                  
2024-01-15 00:00:00    | 3                                  
2024-01-16 00:00:00    | 3                                  
2024-01-17 00:00:00    | 3                                  
2024-01-18 00:00:00    | 3                                  
2024-01-19 00:00:00    | 3                                  
2024-01-20 00:00:00    | 3                                  
2024-01-21 00:00:00    | 3                                  
2024-01-22 00:00:00    | 2                                  
2024-01-23 00:00:00    | 1                                  
2024-01-24 00:00:00    | 1                                  
2024-01-25 00:00:00    | 1
