rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__edge_cases__rolling_with_single_day_range.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/edge_cases.rs
expression: result
---
orders__created_at_day | orders__rolling_sum_trailing_7d
-----------------------+--------------------------------
2024-01-15 00:00:00    | 530.00
