rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__edge_cases__rolling_without_time_dimension.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/edge_cases.rs
expression: result
---
orders__rolling_sum_trailing_7d
-------------------------------
2755.00
